# cadbench

./: .gitignore  LICENSE  README.md  app.py  prompts.py  pyproject.toml
static/: index.html  output.FCStd  output.stl
