[project]
name = "cadbench"
version = "0.1.0"
description = "A benchmark for LLM capabilities in generating CAD models using FreeCAD."
authors = [{name = "Thomas Rochefort-Beaudoin"}]
requires-python = ">=3.8"
dependencies = [
    "Flask==3.0.2",
    "openai==1.14.2",
    "httpx<0.28.0",
    "python-dotenv==1.0.1",
    "Flask-Cors==4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Explicitly include app.py and the static directory for the build.
include = [
    "app.py",
    "static/",
] 